# mlops-zone-entries-exits-prediction

./: .gitignore  Dockerfile  README.md  model.joblib  model.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-model.yml  staging-model.yml
.venv311/: pyvenv.cfg
kubernetes/: README.md
kubernetes/auth_conf/: README.md  authorizationPolicy.yaml  envoyfilter_modify-redirect-response.yaml  requesAuth.yaml
kubernetes/production/: inferenceservice.yaml  ingressroute.yaml  virtualservice.yaml
kubernetes/staging/: inferenceservice.yaml  ingressroute.yaml  virtualservice.yaml
test_request/: kserve_request_production.py  kserve_request_staging.py  local_request.py
test_request/unit_testing_pytest/: test_script_production.py  test_script_staging.py
