[tool.poetry]
name = "mlops-platform-kserve-template"
version = "0.1.0"
description = ""
authors = [
    "Andres Cardoso Cordero <andres.cardoso@eviden.com>"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kserve = "0.11.*"
joblib = "1.3.*"
minio = "7.2.*"
scikit-learn = "1.4.0"
numpy = "1.26.*"
beautifulsoup4 = "4.12.*"
requests = "^2.31"        # Added requests

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-mock = "^3.11"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
py_version = 310
line_length = 120

[tool.poetry.scripts]
PYTHONDONTWRITEBYTECODE = "1"
